--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Mi postre</title>
+    <meta name="google-site-verification" content="qF-PU9cRgb0iL_TEIJic50jNBYv0pMCulozfZNDqBw0" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
